--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 26
-        versionName "1.7.4-full"
+        versionName "1.7.5-full"
         consumerProguardFiles 'proguard-rules.pro'
     }
 
@@ -35,7 +35,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.2.0'
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:percent:25.2.0'
-    implementation('com.facebook.android:audience-network-sdk:5.+') {
+    implementation('com.facebook.android:audience-network-sdk:5.1.0') {
         exclude group: 'com.google.android.gms'
     }
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
