--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -23,7 +23,6 @@
             android:icon="@drawable/ad_tr_bg"
             android:label=""
             android:launchMode="singleInstance"
-            android:noHistory="true"
             android:theme="@android:style/Theme.Translucent" />
         <!-- applovin -->
         <activity
@@ -32,16 +31,14 @@
             android:excludeFromRecents="true"
             android:icon="@drawable/ad_tr_bg"
             android:label=""
-            android:launchMode="singleInstance"
-            android:noHistory="true" />
+            android:launchMode="singleInstance" />
         <activity
             android:name="com.applovin.adview.AppLovinConfirmationActivity"
             android:configChanges="orientation|screenSize"
             android:excludeFromRecents="true"
             android:icon="@drawable/ad_tr_bg"
             android:label=""
-            android:launchMode="singleInstance"
-            android:noHistory="true" />
+            android:launchMode="singleInstance" />
 
         <meta-data
             android:name="applovin.sdk.key"
@@ -69,16 +66,14 @@
             android:excludeFromRecents="true"
             android:icon="@drawable/ad_tr_bg"
             android:label=""
-            android:launchMode="singleInstance"
-            android:noHistory="true" />
+            android:launchMode="singleInstance" />
         <activity
             android:name="com.mopub.mobileads.MraidActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
             android:icon="@drawable/ad_tr_bg"
             android:label=""
-            android:launchMode="singleInstance"
-            android:noHistory="true" />
+            android:launchMode="singleInstance" />
 
         <!-- Rewarded Video and Rewarded Playables -->
         <activity
@@ -93,15 +88,6 @@
             android:excludeFromRecents="true"
             android:icon="@drawable/ad_tr_bg"
             android:label="" />
-
-        <activity
-            android:name="com.appub.ads.a.FSA"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-            android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
-            android:label=""
-            android:launchMode="singleInstance"
-            android:theme="@android:style/Theme.Translucent" />
 
         <!-- InMobi -->
         <activity
@@ -126,7 +112,6 @@
             android:label=""
             android:launchMode="singleInstance"
             android:multiprocess="true"
-            android:noHistory="true"
             android:taskAffinity=":inneractive"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
         <activity
@@ -135,7 +120,6 @@
             android:hardwareAccelerated="true"
             android:icon="@drawable/ad_tr_bg"
             android:label=""
-            android:noHistory="true"
             android:taskAffinity=":inneractive"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
         <activity
