1. 更新版本号

--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -20,7 +20,7 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 26
-        versionName "1.9.4"
+        versionName "1.9.4-pure"
         consumerProguardFiles 'proguard-rules.pro'
     }
 
