--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -95,6 +95,9 @@ dependencies {
     implementation 'com.adywind:ui:4.4.20'
     implementation 'com.adywind:component:4.4.20'
     implementation 'com.adywind:native:4.4.20'
+
+    // display io
+    implementation 'io.display:android-sdk:2.0.0.10'
 }
 
 // 发布aar
