--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -138,13 +138,14 @@
             android:noHistory="true"
             android:taskAffinity=":inneractive"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
-        <!--<activity-->
-        <!--android:name="com.fyber.inneractive.sdk.activities.InneractiveRichMediaVideoPlayerActivity"-->
-        <!--android:excludeFromRecents="true"-->
-        <!--android:hardwareAccelerated="true"-->
-        <!--android:launchMode="singleInstance"-->
-        <!--android:multiprocess="true"-->
-        <!--android:noHistory="true"-->
-        <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />-->
+        <activity
+            android:name="io.display.sdk.DioTranslucentActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:excludeFromRecents="true"
+            android:icon="@drawable/ad_tr_bg"
+            android:label=""
+            android:launchMode="singleInstance"
+            android:noHistory="true"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
     </application>
 </manifest>
