1. 更新encrypt.gradle,自动增加仓库地址2

--- a/encrypt.gradle
+++ b/encrypt.gradle
@@ -30,6 +30,10 @@ try {
                 r->
                     r.url = "http://maven.display.io/"
             }
+            repo.maven {
+                r->
+                    r.url = "http://dl.appnext.com/"
+            }
     }
 } catch (Exception e) {
 }
