--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -26,10 +26,18 @@ android {
 dependencies {
     implementation 'com.android.support:appcompat-v7:25.2.0'
     implementation 'com.android.support:percent:25.2.0'
-    implementation('com.facebook.android:audience-network-sdk:5.1.0') {
-        exclude group: 'com.google.android.gms'
+    // MoPub
+    implementation('com.mopub:mopub-sdk:5.4.0@aar') {
+        transitive = true
+        exclude module: 'libAvid-mopub' // To exclude AVID
+        exclude module: 'moat-mobile-app-kit'
+        exclude group: 'com.android.support'
+        exclude module: 'mopub-sdk-interstitial' // use below com.mopub:mopub-sdk-interstitial:5.4.0-webeye@aar'
     }
+    implementation 'com.mopub:mopub-sdk-interstitial:5.4.0-webeye@aar'
+    // admob
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    // firebase
     implementation 'com.google.firebase:firebase-config:15.0.2'
 }
 
