--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -1,5 +1,17 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'stringfog'
+stringfog {
+    // 这是加解密 key，可以自由定义。
+    key 'cack_fxxk'
+    // 开关
+    enable true
+    // 加解密库的实现类路径，需和上面配置的加解密算法库一致。
+    implementation 'com.github.megatronking.stringfog.xor.StringFogImpl'
+    // 指定需加密的代码包路径，可配置多个，未指定将默认全部加密。
+    // fogPackages = ['com.xxx.xxx']
+}
+
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -32,6 +44,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation fileTree(dir: 'libs', include: ['*.aar'])
+    // stringfog
+    implementation 'com.github.megatronking.stringfog:xor:1.0.0'
     implementation 'com.android.support:appcompat-v7:25.2.0'
     implementation 'com.android.support:percent:25.2.0'
     implementation('com.facebook.android:audience-network-sdk:5.1.0') {
