--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,13 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // string fog
+        classpath 'com.github.megatronking.stringfog:gradle-plugin:2.0.1'
+        // 选用加解密算法库，默认实现了 xor 和 aes-cbc 两种简单算法，也可以使用自己的加解密库。
+        classpath 'com.github.megatronking.stringfog:xor:1.0.0'
     }
 }
 
@@ -29,7 +33,6 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url rootProject.ext.publishUri }
-        // maven { url 'https://gitee.com/taugin/werepo/raw/release' }
         mavenLocal()
         maven { url "http://dl.appnext.com/" }
         maven { url "http://maven.display.io/" }
