1. 重命名内部包名

--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hauyu.adsdk">
+    package="com.appub.ads.a">
 
     <uses-sdk android:minSdkVersion="9" />
 
