1. 增加列表广告

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
                 <action android:name="${applicationId}.action.LSPICKER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ListViewForAd" />
 
         <meta-data
             android:name="android.max_aspect"
