--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,9 @@
             android:name=".NativeBannerActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
-            android:launchMode="singleInstance"
             android:theme="@android:style/Theme.Translucent">
             <intent-filter>
-                <action android:name="${applicationId}.action.AFPICKER" />
+                <action android:name="${applicationId}.action.FAPICKER" />
             </intent-filter>
         </activity>
         <activity
