--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,11 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven { url rootProject.ext.publishUri }
+        maven { url "https://taugin.gitee.io/werepo" }
         mavenLocal()
         maven { url "http://dl.appnext.com/" }
         maven { url "http://maven.display.io/" }
+        // maven { url "https://dl.bintray.com/wesdk/WeSdk" }
     }
 }
 
