--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -86,8 +86,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.1'
 
     // Dsp
-    implementation 'com.dspmob.sdk:dspsdk:0.22'
-    implementation 'com.mopub.mediation:dspmob:0.21.0@aar'
+    implementation "com.we.sdk:exchange:0.1.3"
+    implementation 'com.mopub.mediation:taurus-exchange:0.1.2.0'
+    implementation('com.stanfy:gson-xml-java:0.1.7') {
+        exclude group: 'xmlpull', module: 'xmlpull'
+    }
 
     // display io
     implementation 'io.display:android-sdk:2.0.0.10'
