--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ def isWindows() {
 
 ext {
     System.out.println("adsdk current operat system is windows : " + isWindows())
-    publishUri = isWindows() ? 'F:\\workdir\\products\\privaterepo' : "upload"
+    publishUri = isWindows() ? 'F:\\workdir\\products\\webeyerepo' : "upload"
 }
 
 allprojects {
@@ -32,11 +32,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven { url "https://taugin.gitee.io/werepo" }
         mavenLocal()
-        maven { url "http://dl.appnext.com/" }
-        maven { url "http://maven.display.io/" }
-        // maven { url "https://dl.bintray.com/wesdk/WeSdk" }
     }
 }
 
