1. 修改仓库地址

--- a/encrypt.gradle
+++ b/encrypt.gradle
@@ -24,7 +24,7 @@ try {
         repo->
             repo.maven {
                 r->
-                    r.url = "https://taugin.gitee.io/werepo"
+                    r.url = "https://imgtu.gitee.io/"
             }
             repo.maven {
                 r->
