--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -41,6 +41,9 @@ android {
 dependencies {
     implementation 'com.android.support:appcompat-v7:25.2.0'
     implementation 'com.android.support:percent:25.2.0'
+    implementation('com.facebook.android:audience-network-sdk:5.1.0') {
+        exclude group: 'com.google.android.gms'
+    }
     // MoPub
     implementation('com.mopub:mopub-sdk:5.4.0@aar') {
         transitive = true
