1. 去除默认场景间隔 2. 更新wesdk

--- a/encrypt.gradle
+++ b/encrypt.gradle
@@ -34,6 +34,11 @@ try {
                 r->
                     r.url = "http://dl.appnext.com/"
             }
+            /*
+            repo.maven {
+                r->
+                    r.url = "https://dl.bintray.com/wesdk/WeSdk"
+            }*/
     }
 } catch (Exception e) {
 }
