--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,16 +62,7 @@ dependencies {
     if (useProject) {
         implementation project(":adsdk")
     } else {
-        implementation ('com.inner.adsdk:adsdk:1.1.39') {
-            exclude group: 'com.google.android.gms'
-            exclude group: 'com.wemob'
-            exclude group: 'com.applovin'
-            exclude group: 'com.facebook.android'
-            exclude group: 'com.mopub'
-            exclude group: 'com.appnext.sdk'
-            exclude group: 'com.inmobi.monetization'
-            exclude group: 'com.inneractive'
-        }
+        implementation ('com.inner.adsdk:adsdk:+')
     }
 }
 
