Revert "1. 删除displayio广告平台"
This reverts commit 50c64a8bd7614fb74f3711ee8161a03bcf59f244.

--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -96,7 +96,7 @@ dependencies {
     }
 
     // display io
-    // implementation 'io.display:android-sdk:2.0.0.10'
+    implementation 'io.display:android-sdk:2.0.0.10'
 
     // AdColony
     // 会导致同步失败
