--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -116,7 +116,7 @@ dependencies {
     implementation 'com.adywind:native:4.4.20'
 
     // display io
-    implementation 'io.display:android-sdk:2.0.0.10'
+    implementation 'com.brandio.ads:sdk:3.0.0'
 
     // AdColony
     // 会导致同步失败
