--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,11 @@ android {
             applicationId "com.inner.adsdk.demo.amazon"
         }
     }*/
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 repositories {
     maven {
