--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,9 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 mopub.avidEnabled=false
 mopub.moatEnabled=false
+
+
+nexus_url=http://nexus.webeyemobi.com/repository/webeye/
+nexus_url_snapshot=http://nexus.webeyemobi.com/repository/maven-snapshots/
+nexus_user=admin
+nexus_password=Webeye,2010
