--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -139,7 +139,7 @@
             android:taskAffinity=":inneractive"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
         <activity
-            android:name="io.display.sdk.DioTranslucentActivity"
+            android:name="com.brandio.ads.DioTranslucentActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:excludeFromRecents="true"
             android:icon="@drawable/ad_tr_bg"
