--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,16 +39,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
-repositories {
-    maven {
-        url rootProject.ext.publishUri
-    }
-}
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:multidex:1.0.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.inner.basic:basic:+'
+    implementation 'com.inner.basic:basic:1.7.2'
     if (useProject) {
         implementation project(":adsdk")
     } else {
@@ -66,6 +62,6 @@ dependencies {
 }
 
 configurations.all {
-    resolutionStrategy.force 'com.google.android.gms:play-services-base:15.0.0'
-    resolutionStrategy.force 'com.google.firebase:firebase-analytics:15.0.0'
+//    resolutionStrategy.force 'com.google.android.gms:play-services-base:15.0.2'
+//    resolutionStrategy.force 'com.google.firebase:firebase-analytics:15.0.2'
 }
