--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.appub.ads.a">
+    package="com.gekes.fvs.tdsvap">
 
     <uses-sdk android:minSdkVersion="9" />
 
@@ -72,7 +72,7 @@
             android:icon="@drawable/ad_tr_bg"
             android:label="" />
         <activity
-            android:name="com.appub.ads.a.FSA"
+            android:name="com.gekes.fvs.tdsvap.GFAPSD"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
             android:icon="@drawable/ad_tr_bg"
