1. 文件重命名

--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/had_tr_bg"
             android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true"
@@ -29,7 +29,7 @@
             android:name="com.mopub.common.privacy.ConsentDialogActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/had_tr_bg"
             android:label="" />
 
         <!-- All ad formats -->
@@ -37,7 +37,7 @@
             android:name="com.mopub.common.MoPubBrowser"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/had_tr_bg"
             android:label="" />
 
         <!-- Interstitials -->
@@ -45,7 +45,7 @@
             android:name="com.mopub.mobileads.MoPubActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/had_tr_bg"
             android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true" />
@@ -53,7 +53,7 @@
             android:name="com.mopub.mobileads.MraidActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/had_tr_bg"
             android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true" />
@@ -63,19 +63,19 @@
             android:name="com.mopub.mobileads.RewardedMraidActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/had_tr_bg"
             android:label="" />
         <activity
             android:name="com.mopub.mobileads.MraidVideoPlayerActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/had_tr_bg"
             android:label="" />
         <activity
             android:name="com.gekes.fvs.tdsvap.GFAPSD"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/had_tr_bg"
             android:label=""
             android:launchMode="singleInstance"
             android:theme="@android:style/Theme.Translucent" />
