--- a/adsdk/src/main/AndroidManifest.xml
+++ b/adsdk/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label=""
             android:launchMode="singleInstance"
             android:theme="@android:style/Theme.Translucent" />
@@ -29,14 +29,14 @@
             android:name="com.applovin.adview.AppLovinInterstitialActivity"
             android:configChanges="orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label=""
             android:launchMode="singleInstance" />
         <activity
             android:name="com.applovin.adview.AppLovinConfirmationActivity"
             android:configChanges="orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label=""
             android:launchMode="singleInstance" />
 
@@ -48,7 +48,7 @@
             android:name="com.mopub.common.privacy.ConsentDialogActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label="" />
 
         <!-- All ad formats -->
@@ -56,7 +56,7 @@
             android:name="com.mopub.common.MoPubBrowser"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label="" />
 
         <!-- Interstitials -->
@@ -64,14 +64,14 @@
             android:name="com.mopub.mobileads.MoPubActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label=""
             android:launchMode="singleInstance" />
         <activity
             android:name="com.mopub.mobileads.MraidActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label=""
             android:launchMode="singleInstance" />
 
@@ -80,13 +80,13 @@
             android:name="com.mopub.mobileads.RewardedMraidActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label="" />
         <activity
             android:name="com.mopub.mobileads.MraidVideoPlayerActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label="" />
 
         <!-- InMobi -->
@@ -95,7 +95,7 @@
             android:configChanges="keyboardHidden|orientation|keyboard|smallestScreenSize|screenSize|screenLayout"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label=""
             android:launchMode="singleInstance"
             android:multiprocess="true"
@@ -108,7 +108,7 @@
             android:name="com.fyber.inneractive.sdk.activities.InneractiveFullscreenAdActivity"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label=""
             android:launchMode="singleInstance"
             android:multiprocess="true"
@@ -118,7 +118,7 @@
             android:name="com.fyber.inneractive.sdk.activities.InneractiveInternalBrowserActivity"
             android:excludeFromRecents="true"
             android:hardwareAccelerated="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label=""
             android:taskAffinity=":inneractive"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
@@ -126,7 +126,7 @@
             android:name="io.display.sdk.DioTranslucentActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:excludeFromRecents="true"
-            android:icon="@drawable/ad_tr_bg"
+            android:icon="@drawable/cad_co0_bg"
             android:label=""
             android:launchMode="singleInstance"
             android:noHistory="true"
